--- a/nstyle.css
+++ b/nstyle.css
@@ -133,6 +133,7 @@ nav {
     
 }
 
+
 .container .login-text {
     color: #111;
     font-weight: 500;
@@ -147,6 +148,23 @@ nav {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
     margin-bottom: 25px;
+}
+.container .login-email .input-group {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 25px;
+}
+
+.container .login-email .input-group input {
+    width: 100%;
+    height: 100%;
+    border: 2px solid #e7e7e7;
+    padding: 15px 20px;
+    font-size: 1rem;
+    border-radius: 30px;
+    background: transparent;
+    outline: none;
+    transition: .3s;
 }
 
 
@@ -180,6 +198,50 @@ nav {
 body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
+}
+/*servives*/
+
+.delivery-services-container {
+    display:flex;
+    justify-content:center;
+    background:linear-gradient(to right, rgba(255,0,0,0), rgba(133, 19, 19, 0.5));
+    border: 1px solid #ccc;
+    border-radius: 80px;
+    padding: 25px;
+    margin: 50;
+    
+}
+
+.service {
+    text-align: center;
+    flex: 1;
+    margin: 0 10px; /* Adjust the margin as needed */
+}
+.delivery-services-container a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+.service-icon {
+    width: 80px;
+    height: 80px;
+    background-color:#ff9900;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 10px;
+}
+
+.service-icon img {
+    width: 50px;
+    height: 50px;
+}
+
+.service-name {
+    color: #fff;
+
 }
 
 footer {
