--- a/Lstyle.css
+++ b/Lstyle.css
@@ -2,7 +2,7 @@
 /* Define some basic styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: #fff;
+    background:;
     color: #333;
     line-height: 1.6;
 }
