--- a/nstyle.css
+++ b/nstyle.css
@@ -12,7 +12,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: url('background.jpg') no-repeat center center/cover;
+    background: ;
     color: #333;
     line-height: 1.6;
 }
