--- a/nstyle.css
+++ b/nstyle.css
@@ -12,7 +12,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: ;
+    
     color: #333;
     line-height: 1.6;
 }
@@ -130,7 +130,8 @@ nav {
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0,0,0,.3);
     padding: 40px 30px;
-    
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -243,6 +244,93 @@ body, h1, h2, p, ul, li {
     color: #fff;
 
 }
+/* delivery status*/
+
+.vendor-container {
+    width: 1400px;
+    min-height: 400px;
+    display:flex;
+    justify-content: center;
+    background:  linear-gradient(to right, rgba(255,0,0,0), rgba(133, 19, 19, 0.5));
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0,0,0,.3);
+    padding: 0px;
+    
+}
+.New-container {
+  
+    margin: 10px;
+
+}
+.approval-container {
+    
+    
+    margin: 10px;
+
+}
+.Dropped-container {
+    
+    
+    margin: 10px;
+
+}
+.Transit-container {
+    
+    
+    margin: 10px;
+
+}
+.Delivered-container {
+   
+    
+    margin: 10px;
+
+}
+.Undelivered-container {
+    
+    
+    margin: 10px;
+
+}
+.vendor-info {
+    text-align: center;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 1px;
+    width: 150px; 
+    height: 150px; 
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+
+}
+
+.vendor-icon {
+    width: 80px;
+    height: 80px;
+    background-color:#ff9900;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 10px;
+}
+.vendor-icon img {
+    width: 50px;
+    height: 50px;
+}
+
+.vendor-label {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.vendor-number {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+
 
 footer {
     background-color: #333;
