--- a/nstyle.css
+++ b/nstyle.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 20px;
+    padding: 20px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 
@@ -12,9 +12,10 @@
 
 body {
     font-family: Arial, sans-serif;
-    
+    max-height: 100vh;
+    overflow-y: auto;
     color: #333;
-    line-height: 1.6;
+    
 }
 
 header {
@@ -124,8 +125,8 @@ nav {
     margin: 5px 0;
 }
 .container {
-    width: 400px;
-    min-height: 400px;
+    width: 90%; /* Adjust the percentage as needed */
+    margin: auto;
     background:  linear-gradient(to right, rgba(255,0,0,0), rgba(133, 19, 19, 0.5));
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0,0,0,.3);
@@ -185,7 +186,7 @@ nav {
     color: #ff6600;
 }
 
-@media (max-width: 430px) {
+@media (max-width: 500px) {
     .container {
         width: 300px;
     }
@@ -441,6 +442,6 @@ footer {
     background-color: #333;
     color: #fff;
     text-align:justify;
-    padding: 1rem 0;
+    padding: 0 0;
 }
 
