--- a/nstyle.css
+++ b/nstyle.css
@@ -1,21 +1,10 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-* {
-    margin: 20px;
-    padding: 20px;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-
-}
-
-
+/* Define some basic styling */
 body {
     font-family: Arial, sans-serif;
-    max-height: 100vh;
-    overflow-y: auto;
-    color: #333;
     
+    color: #333;
+    line-height: 1.6;
 }
 
 header {
@@ -53,6 +42,7 @@ nav {
 .nav-links li a:hover {
     color: #ff9900;
 }
+
 /* Style the back button */
 .backButton {
 
@@ -125,8 +115,8 @@ nav {
     margin: 5px 0;
 }
 .container {
-    width: 90%; /* Adjust the percentage as needed */
-    margin: auto;
+    width: 400px;
+    min-height: 400px;
     background:  linear-gradient(to right, rgba(255,0,0,0), rgba(133, 19, 19, 0.5));
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0,0,0,.3);
@@ -186,7 +176,7 @@ nav {
     color: #ff6600;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 430px) {
     .container {
         width: 300px;
     }
@@ -442,6 +432,6 @@ footer {
     background-color: #333;
     color: #fff;
     text-align:justify;
-    padding: 0 0;
+    padding: 1rem 0;
 }
 
