--- a/nstyle.css
+++ b/nstyle.css
@@ -117,7 +117,7 @@ nav {
 .container {
     width: 400px;
     min-height: 400px;
-    background:  linear-gradient(to right, rgba(255,0,0,0), rgba(133, 19, 19, 0.5));
+    background:  linear-gradient(to right, rgba(156, 69, 69, 0), rgba(146, 20, 20, 0.5));
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0,0,0,.3);
     padding: 40px 30px;
@@ -234,7 +234,7 @@ body, h1, h2, p, ul, li {
 }
 
 .service-name {
-    color: #fff;
+    color: #070707;
 
 }
 /* delivery status*/
@@ -429,6 +429,19 @@ html:not(.dark-style) .account-settings-links .list-group-item.active {
 .light-style .account-settings-links .list-group-item {
     padding     : 0.85rem 1.5rem;
     border-color: rgba(24, 28, 33, 0.03) !important;
+}
+/* map */
+#map-container {
+    width: 300px; /* Set the width of the container */
+    height: 300px; /* Set the height of the container */
+    margin: 20px; /* Add some margin for spacing */
+    border: 1px solid #ccc; /* Add a border for a neat appearance */
+    border-radius: 8px; /* Optional: Add border-radius for rounded corners */
+    overflow: hidden; /* Hide any overflow for a clean look */
+}
+#map {
+    width: 100%;
+    height: 100%;
 }
 footer {
     background-color: #333;
