--- a/profile.css
+++ b/profile.css
@@ -10,11 +10,14 @@ body {
 }
 
 .profile-container {
+    width: 400px;
+    min-height: 400px;
+    background:  linear-gradient(to right, rgba(156, 69, 69, 0), rgba(146, 20, 20, 0.5));
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0,0,0,.3);
+    padding: 40px 30px;
     display: flex;
-    background-color: #fff;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    justify-content: center;
 }
 
 .profile-picture {
@@ -65,7 +68,7 @@ label {
 
 #update-btn {
     padding: 10px 15px;
-    background-color: #4CAF50;
+    background-color: #ff6600;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -75,5 +78,5 @@ label {
 }
 
 #update-btn:hover {
-    background-color: #45a049;
+    background-color: #ff6600;
 }
