--- a/landing.css
+++ b/landing.css
@@ -101,9 +101,9 @@ nav {
 .hero {
     color: #131111;
     text-align: center;
-   
+    background: #ff9900;
     padding: 40px 30px;
-    background:  #fff ;
+    
     border-radius: 50px;
     box-shadow: 0 0 5px rgba(0,0,0,.3);
     
@@ -117,7 +117,7 @@ nav {
 
 .cta-button {
     display: inline-block;
-    background-color: #ff9900;
+    background-color: #ff6600;
     color: #fff;
     padding: 0.5rem 1rem;
     text-decoration: none;
@@ -141,7 +141,7 @@ nav {
 }
 
 .contact__aside {
-    background: #133131; /* Adjust the background color */
+    background: #ff6600; /* Adjust the background color */
     padding: 3rem;
     border-radius: 1rem;
     color: #fff;
@@ -166,10 +166,14 @@ nav {
     padding: 4rem 0; /* Adjust padding as needed */
     text-align: center;
 }
-
+.f2{
+    justify-content: center;
+    color:black;
+}
 .services h2 {
     font-size: 2rem;
     margin-bottom: 2rem;
+    color: #131111;
 }
 
 /* Update the existing CSS */
@@ -200,7 +204,7 @@ nav {
     width: 100%;
     height: 100%;
     padding: 2em 1.5em;
-    background: linear-gradient(#ffffff 50%, #2c7bfe 50%);
+    background: linear-gradient(#ffffff 50%, #ff6600 50%);
     background-size: 100% 200%;
     background-position: 0 2.5%;
     border-radius: 10px;
@@ -221,14 +225,14 @@ h3 {
 }
 
 p {
-    color: #575a7b;
+    color: black;
     font-size: 15px;
     line-height: 1.6;
     letter-spacing: 0.03em;
 }
 
 .icon-wrapper {
-    background-color: #2c7bfe;
+    background-color: #ff6600;
     position: relative;
     margin: auto;
     font-size: 30px;
@@ -339,7 +343,7 @@ p {
 
 /* Footer Styles */
 footer {
-    background-color: #333;
+    background-color: #ff6600;
     color: #fff;
     text-align: justify;
     padding: 1rem 0;
